--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,11 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("milo.Milo")
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "milo"
     archiveClassifier = null
 }
 
